--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,body{
+  background: linear-gradient(to right, #616161, #9bc5c3);
+  font-family: Roboto,sans-serif;
+  margin-top: 40px;
+  width: 100%;  
+}
+
+.aplicacion-tareas{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+h1{
+  width: 100%;
+  color: white;
+  font-weight: bold;
+  font-size: 3.5em;
+  text-shadow: 5px 5px 10px rgb(72, 74, 75);
+}
+h2{
+  color: #1b1b32;
+  font-size: 25px;
+  font-family: Roboto,sans-serif;
+  text-align: center;
+  margin: 20px 0;
+}
+.contenedor-titulo{
+  width: 100%;
+  margin-bottom: 15px;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tareas-lista-principal{
+  width: 600px;
+  min-height: 500px;
+  background-color: #d0d0b5;
+  padding: 25px;
+  margin: 10px;  
+  border-radius: 26px;
+  box-shadow: 0px 0px 9px #555;
 }
